new PoolSource style

--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -1,6 +1,6 @@
 process TEST = {
        source = PoolSource {
-                untracked string fileName = "00000001_FilterUnitFramework_0_0.root"
+ 		untracked vstring fileNames = {'file:00000001_FilterUnitFramework_0_0.root'}
                 untracked int32 maxEvents = 100
 		untracked string moduleLogName= "RPCDigiDQM"
        }
@@ -12,7 +12,6 @@ process TEST = {
 	}
 	
 
-	module rpcdigidqm = RPCMonitorDigi{}
 
 	service = MessageLogger {
     		vstring destinations = {"RpcUnpacker.log"}
@@ -20,6 +19,7 @@ process TEST = {
                 PSet detailedInfo.txt = { int32  lineLength = 132    } 
        }
 
+	module rpcdigidqm = RPCMonitorDigi{}
 	
 
         service = DaqMonitorROOTBackEnd{}
@@ -32,7 +32,7 @@ process TEST = {
         # (default: 5)
         	untracked int32 reconnect_delay = 5
         # collector hostname; examples:localhost(default),lxcmse2.cern.ch, etc
-        	untracked string DestinationAddress = "lxplus001.cern.ch"
+        	untracked string DestinationAddress = "lxplus012.cern.ch"
         # port for communicating with collector (default: 9090)
         	untracked int32 SendPort = 9090
         # monitoring period in ms (i.e. how often monitoring elements
