--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -15,18 +15,20 @@ process TEST = {
 
 	service = MessageLogger {
     		vstring destinations = {"RpcUnpacker.log"}
-                PSet RpcUnpacker.log     = { bool noLineBreaks = true   }
-                PSet detailedInfo.txt = { int32  lineLength = 132    } 
+                PSet RpcUnpacker.log     = {untracked bool noLineBreaks = true   }
+                PSet detailedInfo.txt = {untracked int32  lineLength = 132    } 
        }
 
-	module rpcdigidqm = RPCMonitorDigi{}
-	
+
+#################    Data Quality Monitoring:   #########################
+
+	module rpcdigidqm = RPCMonitorDigi{}	
 
         service = DaqMonitorROOTBackEnd{}
 
         service = MonitorDaemon{
         # if true, will automatically start DQM thread in background
-        	untracked bool AutoInstantiate=true
+        	untracked bool AutoInstantiate=false
         # if >=0, upon a connection problem, the source will automatically
         # attempt to reconnect with a time delay (secs) specified here
         # (default: 5)
@@ -42,11 +44,25 @@ process TEST = {
         	untracked string NameAsSource = "FU0"
         }
 	
+#################   For RPCRecHits   #########################
+
+        include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
+        include "Geometry/MuonCommonData/data/muonIdealGeometryXML.cfi"
+        include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
+
+	# The module for 1D RPC RecHit building
+	include "RecoLocalMuon/RPCRecHit/data/RPCRecHit.cfi"
+
+
+
+#################   Output module  #########################
   
 	module out = PoolOutputModule {
         	untracked string fileName ="RPCDQMdigi.root"
 	}
 	 
-	path p = {rpcunpacker,rpcdigidqm}
+#################   Path   #########################
+
+	path p = {rpcunpacker,rpcrechitbuilder,rpcdigidqm}
 
 }
