using included .cfi's

--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -5,13 +5,7 @@ process TEST = {
 		untracked string moduleLogName= "RPCDigiDQM"
        }
 	
-	module rpcunpacker = RPCUnpackingModule{
-                untracked bool PrintOut = false  
-		untracked bool PrintHexDump = false
-                untracked bool runDQM = false
-	}
 	
-
 
 	service = MessageLogger {
     		vstring destinations = {"RpcUnpacker.log"}
@@ -20,29 +14,19 @@ process TEST = {
        }
 
 
+#################    Raw To Digi:   #########################
+
+        include "EventFilter/RPCRawToDigi/data/RPCUnpacking.cfi"
+
 #################    Data Quality Monitoring:   #########################
+        include "DQM/RPCMonitorDigi/data/RPCDigiMonitoring.cfi"
+        include "DQM/RPCMonitorDigi/data/RPCEfficiencyMonitoring.cfi"
+        
+	service = DaqMonitorROOTBackEnd{}
+	include "DQMServices/Daemon/test/data/dqm_monitorDaemon.cfi"
+	replace MonitorDaemon.AutoInstantiate = false
+	replace MonitorDaemon.DestinationAddress ="lxplus063.cern.ch"
 
-	module rpcdigidqm = RPCMonitorDigi{}	
-
-        service = DaqMonitorROOTBackEnd{}
-
-        service = MonitorDaemon{
-        # if true, will automatically start DQM thread in background
-        	untracked bool AutoInstantiate=false
-        # if >=0, upon a connection problem, the source will automatically
-        # attempt to reconnect with a time delay (secs) specified here
-        # (default: 5)
-        	untracked int32 reconnect_delay = 5
-        # collector hostname; examples:localhost(default),lxcmse2.cern.ch, etc
-        	untracked string DestinationAddress = "lxplus012.cern.ch"
-        # port for communicating with collector (default: 9090)
-        	untracked int32 SendPort = 9090
-        # monitoring period in ms (i.e. how often monitoring elements
-        # are shipped to the collector; default: 1000)
-        	untracked int32 UpdateDelay = 10
-        # name of DQM source (default: DQMSource)
-        	untracked string NameAsSource = "FU0"
-        }
 	
 #################   For RPCRecHits   #########################
 
@@ -63,6 +47,6 @@ process TEST = {
 	 
 #################   Path   #########################
 
-	path p = {rpcunpacker,rpcrechitbuilder,rpcdigidqm}
+	path p = {rpcunpacker,rpcrechitbuilder,rpcdigidqm,rpcefficiencydqm}
 
 }
