update of collection names

--- a/test/dqm_rpc_efficiency.cfg
+++ b/test/dqm_rpc_efficiency.cfg
@@ -106,7 +106,7 @@ process testDTRecSegment4DProducer = {
 
 	## _ExecPath_ ##
 	
-	path p = {DTSegment4DProducer,rpcefficiencydqm}
+	path p = {dt4DSegments,rpcefficiencydqm}
 
 	endpath this_is_the_end = {out}
 }
