adjusted to new cfi names

--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -35,7 +35,7 @@ process TEST = {
         include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
 
 	# The module for 1D RPC RecHit building
-	include "RecoLocalMuon/RPCRecHit/data/RPCRecHit.cfi"
+	include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
 
 
 
@@ -47,6 +47,6 @@ process TEST = {
 	 
 #################   Path   #########################
 
-	path p = {rpcunpacker,rpcrechitbuilder,rpcdigidqm,rpcefficiencydqm}
+	path p = {rpcRecHits,rpcrechitbuilder,rpcdigidqm,rpcefficiencydqm}
 
 }
