--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -1,18 +1,15 @@
 process TEST = {
        source = PoolSource {
- 		untracked vstring fileNames = {'file:00000001_FilterUnitFramework_0_0.root'}
-                untracked int32 maxEvents = 100
+ 		untracked vstring fileNames = {'file:/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/RPCdigi106_8_22_10_xx_3bx.root'}
+                untracked int32 maxEvents = -1
 		untracked string moduleLogName= "RPCDigiDQM"
        }
-	
-	
-
+		
 	service = MessageLogger {
-    		vstring destinations = {"RpcUnpacker.log"}
+    		untracked vstring destinations = {"RpcUnpacker.log"}
                 PSet RpcUnpacker.log     = {untracked bool noLineBreaks = true   }
                 PSet detailedInfo.txt = {untracked int32  lineLength = 132    } 
        }
-
 
 #################    Raw To Digi:   #########################
 
@@ -26,7 +23,6 @@ process TEST = {
 	include "DQMServices/Daemon/test/data/dqm_monitorDaemon.cfi"
 	replace MonitorDaemon.AutoInstantiate = false
 	replace MonitorDaemon.DestinationAddress ="lxplus063.cern.ch"
-
 	
 #################   For RPCRecHits   #########################
 
@@ -35,9 +31,8 @@ process TEST = {
         include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
 
 	# The module for 1D RPC RecHit building
-	include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
-
-
+	include "RecoLocalMuon/RPCRecHit/data/RPCRecHit.cfi"
+	replace RPCRecHits.rpcDigiLabel = "rpcunpacker"
 
 #################   Output module  #########################
   
@@ -47,6 +42,5 @@ process TEST = {
 	 
 #################   Path   #########################
 
-	path p = {rpcRecHits,rpcrechitbuilder,rpcdigidqm,rpcefficiencydqm}
-
+	path p = {RPCRecHits,rpcdigidqm}
 }
