*** empty log message ***

--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -6,7 +6,7 @@ process TEST = {
        }
 		
 	service = MessageLogger {
-    		untracked vstring destinations = {"RpcUnpacker.log"}
+    		untracked vstring destinations = {"RpcMonitoring.log"}
                 PSet RpcUnpacker.log     = {untracked bool noLineBreaks = true   }
                 PSet detailedInfo.txt = {untracked int32  lineLength = 132    } 
        }
@@ -17,6 +17,7 @@ process TEST = {
 
 #################    Data Quality Monitoring:   #########################
         include "DQM/RPCMonitorDigi/data/RPCDigiMonitoring.cfi"
+	replace rpcdigidqm.DigiDQMSaveRootFile = true
         include "DQM/RPCMonitorDigi/data/RPCEfficiencyMonitoring.cfi"
         
 	service = DaqMonitorROOTBackEnd{}
@@ -32,7 +33,7 @@ process TEST = {
 
 	# The module for 1D RPC RecHit building
 	include "RecoLocalMuon/RPCRecHit/data/RPCRecHit.cfi"
-	replace RPCRecHits.rpcDigiLabel = "rpcunpacker"
+	replace rpcRecHits.rpcDigiLabel = "rpcunpacker"
 
 #################   Output module  #########################
   
@@ -42,5 +43,5 @@ process TEST = {
 	 
 #################   Path   #########################
 
-	path p = {RPCRecHits,rpcdigidqm}
+	path p = {rpcRecHits,rpcdigidqm}
 }
