*** empty log message ***

--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -1,6 +1,10 @@
 process TEST = {
        source = PoolSource {
- 		untracked vstring fileNames = {'file:/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/RPCdigi106_8_22_10_xx_3bx.root'}
+ 		untracked vstring fileNames =	
+		{
+		//'file:/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/RawData106_8_22_10_xx_3bx.root'
+		'file:/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/RPCdigi2372.root'
+		}
                 untracked int32 maxEvents = -1
 		untracked string moduleLogName= "RPCDigiDQM"
        }
@@ -17,13 +21,15 @@ process TEST = {
 
 #################    Data Quality Monitoring:   #########################
         include "DQM/RPCMonitorDigi/data/RPCDigiMonitoring.cfi"
-	replace rpcdigidqm.DigiDQMSaveRootFile = true
+	replace rpcdigidqm.DigiDQMSaveRootFile =true 
+	replace rpcdigidqm.RootFileNameDigi="/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/DQM_2372.root"
         include "DQM/RPCMonitorDigi/data/RPCEfficiencyMonitoring.cfi"
         
+	service = LockService{ untracked vstring labels = {"source"} }
 	service = DaqMonitorROOTBackEnd{}
 	include "DQMServices/Daemon/test/data/dqm_monitorDaemon.cfi"
 	replace MonitorDaemon.AutoInstantiate = false
-	replace MonitorDaemon.DestinationAddress ="lxplus063.cern.ch"
+	replace MonitorDaemon.DestinationAddress ="lxplus060.cern.ch"
 	
 #################   For RPCRecHits   #########################
 
@@ -38,7 +44,7 @@ process TEST = {
 #################   Output module  #########################
   
 	module out = PoolOutputModule {
-        	untracked string fileName ="RPCDQMdigi.root"
+        	untracked string fileName ="RPCDQM.root"
 	}
 	 
 #################   Path   #########################
