*** empty log message ***

--- a/test/dqm_dt_rpc_efficiency.cfg
+++ b/test/dqm_dt_rpc_efficiency.cfg
@@ -10,19 +10,9 @@ process testDQMRPCEfficiency = {
 			    ## _Input_ ##
 #    			    untracked vstring fileNames = {"file:~/scratch0/dt_rpc_digi.root"}
 #                            untracked vstring fileNames = 
-#                                          {"file:../../../EventFilter/RPCRawToDigi/test/RPCDigiHits3596.root"}
+                            untracked vstring fileNames ={'file:~carrillo/public/rechit4D.root'}
 
-#                           untracked vstring fileNames =
-#{'file:/afs/cern.ch/cms/Physics/muon/CMSSW/DT/samples/2006-08-21/MuonRecHit.root'}
-                            untracked vstring fileNames = 
-                                          {'rfio:$CASTOR_HOME/MTCC/3596/root/rpc_dt_rec.00003596.000.root',
-                                           'rfio:$CASTOR_HOME/MTCC/3596/root/rpc_dt_rec.00003596.001.root',
-                                           'rfio:$CASTOR_HOME/MTCC/3596/root/rpc_dt_rec.00003596.002.root',
-                                           'rfio:$CASTOR_HOME/MTCC/3596/root/rpc_dt_rec.00003596.003.root',
-                                           'rfio:$CASTOR_HOME/MTCC/3596/root/rpc_dt_rec.00003596.004.root'
-                                          }
-
-	   		    untracked int32 maxEvents = 3000
+	   		    untracked int32 maxEvents = -1
 			    untracked uint32 debugVebosity = 1
 	                    untracked bool   debugFlag     = true
   		 	   }
