added cross-talk histo

--- a/test/dqm_dt_rpc_efficiency.cfg
+++ b/test/dqm_dt_rpc_efficiency.cfg
@@ -8,11 +8,11 @@ process testDQMRPCEfficiency = {
 
 	source = PoolSource{
 			    ## _Input_ ##
-#    			    untracked vstring fileNames = {"file:~/scratch0/dt_rpc_digi.root"}
-#                            untracked vstring fileNames = 
-                            untracked vstring fileNames ={'file:~carrillo/public/rechit4D.root'}
+                            untracked vstring fileNames 
+={'rfio:$CASTOR_HOME/MTCC/4123/root/rpc_dt_rec.00004123.000.root'}
+#                            ={'file:/tmp/trentad/rpc_dt_rec.00004123.000.root'}
 
-	   		    untracked int32 maxEvents = -1
+	   		    untracked int32 maxEvents = 10
 			    untracked uint32 debugVebosity = 1
 	                    untracked bool   debugFlag     = true
   		 	   }
@@ -49,7 +49,7 @@ process testDQMRPCEfficiency = {
                 string RootFileNameEfficiency="RPCMonitorEfficiency.root"
 		untracked bool  EffSaveRootFile  = true 
                 untracked int32  EffSaveRootFileEventsInterval  = 100 
-                untracked string EffRootFileName  = "/tmp/trentad/RPCEfficiency0_4New.root"
+                untracked string EffRootFileName  = "/tmp/trentad/RPCEfficiencyProva.root"
 
 
 		string digiLabel = "rpcunpacker"
