--- a/test/dqm_digi.cfg
+++ b/test/dqm_digi.cfg
@@ -1,18 +1,17 @@
 process TEST = {
        source = PoolSource {
- 		untracked vstring fileNames =	
-		{
-		//'file:/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/RawData106_8_22_10_xx_3bx.root'
-		'file:/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/RPCdigi2372.root'
-		}
-                untracked int32 maxEvents = -1
-		untracked string moduleLogName= "RPCDigiDQM"
+                untracked vstring fileNames =
+                {
+                'file:/tmp/cosmicMC.root'
+                }
+                untracked string moduleLogName= "RPCDigiDQM"
        }
-		
-	service = MessageLogger {
-    		untracked vstring destinations = {"RpcMonitoring.log"}
+        untracked PSet maxEvents = {untracked int32 input = -1}
+
+        service = MessageLogger {
+                untracked vstring destinations = {"RpcMonitoring.log"}
                 PSet RpcUnpacker.log     = {untracked bool noLineBreaks = true   }
-                PSet detailedInfo.txt = {untracked int32  lineLength = 132    } 
+                PSet detailedInfo.txt = {untracked int32  lineLength = 132    }
        }
 
 #################    Raw To Digi:   #########################
@@ -21,33 +20,44 @@ process TEST = {
 
 #################    Data Quality Monitoring:   #########################
         include "DQM/RPCMonitorDigi/data/RPCDigiMonitoring.cfi"
-	replace rpcdigidqm.DigiDQMSaveRootFile =true 
-	replace rpcdigidqm.RootFileNameDigi="/afs/cern.ch/user/s/segoni/scratch0/rpcTempData/DQM_2372.root"
-        include "DQM/RPCMonitorDigi/data/RPCEfficiencyMonitoring.cfi"
-        
-	service = LockService{ untracked vstring labels = {"source"} }
-	service = DaqMonitorROOTBackEnd{}
-	include "DQMServices/Daemon/test/data/dqm_monitorDaemon.cfi"
-	replace MonitorDaemon.AutoInstantiate = false
-	replace MonitorDaemon.DestinationAddress ="lxplus060.cern.ch"
-	
-#################   For RPCRecHits   #########################
+#       replace rpcdigidqm.DigiDQMSaveRootFile =true
+#       replace rpcdigidqm.RootFileNameDigi="DQM.root"
+#       include "DQM/RPCMonitorDigi/data/RPCEfficiencyMonitoring.cfi"
 
+
+service = DaqMonitorROOTBackEnd{ }
+
+service = MonitorDaemon{
+    # if true, will automatically start DQM thread in background
+    # (default: false)
+    untracked bool AutoInstantiate = true
+    untracked string DestinationAddress = "localhost"
+    untracked int32 SendPort = 9090
+    untracked int32 UpdateDelay = 5000
+    untracked string NameAsSource = "FU0"
+}
+
+service = DQMShipMonitoring{
+    // event-period for shipping monitoring to collector (default: 25)
+    untracked uint32 period = 500
+}
+#################   For RPCRecHits   #########################
+        include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
         include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
         include "Geometry/MuonCommonData/data/muonIdealGeometryXML.cfi"
         include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
 
-	# The module for 1D RPC RecHit building
-	include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
-	replace rpcRecHits.rpcDigiLabel = "rpcunpacker"
+        # The module for 1D RPC RecHit building
+        include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
+#       replace rpcRecHits.rpcDigiLabel = "rpcunpacker"
 
 #################   Output module  #########################
-  
-	module out = PoolOutputModule {
-        	untracked string fileName ="RPCDQM.root"
-	}
-	 
+
+        module out = PoolOutputModule {
+                untracked string fileName ="RPCDQM.root"
+        }
+
 #################   Path   #########################
 
-	path p = {rpcRecHits,rpcdigidqm}
+        path p = {rpcRecHits,rpcdigidqm}
 }
