added Parameters dt-csc and Event Labels

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -13,6 +13,13 @@ source = PoolSource
 service = MessageLogger {}
 
 module demo = MuonSegmentEff { 
+
+   bool inclcsc = false
+   bool incldt = true
+   int32 widestrip = 5
+   string muonRPCDigis = "muonRPCDigis"
+   string cscSegments = "cscSegments"
+   string dt4DSegments = "dt4DSegments"
 }
 
 include "Geometry/MuonCommonData/data/muonIdealGeometryXML.cfi"
