--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -15,7 +15,8 @@ service = MessageLogger {}
 module demo = MuonSegmentEff { 
 
    bool inclcsc = false
-   bool incldt = true
+   bool incldtMB4 = true
+   bool incldt = false
    int32 widestrip = 5
    string muonRPCDigis = "muonRPCDigis"
    string cscSegments = "cscSegments"
