With Root Histograms

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -1,37 +1,64 @@
-process RPCSegment = {
+process RPCSegmentEff = {
 
-     untracked PSet maxEvents = {untracked int32 input = -1}
+     	untracked PSet maxEvents = {untracked int32 input = -1}
   
-source = PoolSource 
-{ 
-     untracked vstring fileNames = {"rfio:///castor/cern.ch/user/c/carrillo/MonteCarlo/ROOT/sim_10muons_1-10GeV.000.root"}
-}
+	source = PoolSource { 
 
-#keep the logging output to a nice level
-service = MessageLogger {}
+     	#replace 'myfile.root' with the source file you want to use
+	#untracked vstring fileNames = {"file:sim_10muons_1-10GeV.root"} 
+	
+	untracked vstring fileNames = {
+		"rfio:///castor/cern.ch/user/c/carrillo/MonteCarlo80/ROOT/sim_2muon_100pt.001.root"
+		}
+	}
 
-module demo = MuonSegmentEff { 
+	#keep the logging output to a nice level
+	service = MessageLogger {}
 
-   bool inclcsc = false
-   bool incldtMB4 = true
-   bool incldt = false
+	module museg = MuonSegmentEff { 
 
-   int32 widestrip = 5
-   int32 widestripRB4 = 7
-   double MinCosAng = 0.9999
-   double MaxD = 40
+		bool inclcsc = true
+		bool incldtMB4 = false
+		bool incldt = true
 
-   string muonRPCDigis = "muonRPCDigis"
-   string cscSegments = "cscSegments"
-   string dt4DSegments = "dt4DSegments"
-}
+		int32 widestrip = 5
+		int32 widestripRB4 = 7
+		double MinCosAng = 0.9999
+		double MaxD = 40
 
-include "Geometry/MuonCommonData/data/muonIdealGeometryXML.cfi"
-include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
-include "Geometry/CSCGeometry/data/cscGeometry.cfi"
-include "Geometry/DTGeometry/data/dtGeometry.cfi"
-include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
+		string muonRPCDigis = "muonRPCDigis"
+		string cscSegments = "cscSegments"
+		string dt4DSegments = "dt4DSegments"
+               
+		untracked bool   EffSaveRootFile  = true
+		untracked int32  EffSaveRootFileEventsInterval  = 100
+		untracked string EffRootFileName  = "MuonSegEff_RPCGlobal.root"
 
-path p = {demo} 
+	}
+
+	include "Geometry/MuonCommonData/data/muonIdealGeometryXML.cfi"
+	include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
+	include "Geometry/CSCGeometry/data/cscGeometry.cfi"
+	include "Geometry/DTGeometry/data/dtGeometry.cfi"
+	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
+
+	service = ModuleWebRegistry{ }
+	service = DaqMonitorROOTBackEnd{}
+	service = LockService{untracked vstring labels = {"source"}}
+	service = MonitorDaemon {
+	       untracked   bool AutoInstantiate    = true
+	       untracked  int32 reconnect_delay    = 5
+	       untracked string DestinationAddress = "cmsdaquser0.cern.ch"
+	       untracked  int32 SendPort           = 9090
+	       untracked  int32 UpdateDelay        = 10000
+	       untracked string NameAsSource       = "GlobalDQM"
+	}
+
+
+
+	module out = PoolOutputModule {
+                untracked string fileName ="MuonSeg.root"
+        }
+	path p = {museg} 
 
 }
