Printouts and outputs files added

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -3,36 +3,36 @@ process RPCSegmentEff = {
      	untracked PSet maxEvents = {untracked int32 input = -1}
   
 	source = PoolSource { 
-
-     	#replace 'myfile.root' with the source file you want to use
-	#untracked vstring fileNames = {"file:sim_10muons_1-10GeV.root"} 
-	
+   
 	untracked vstring fileNames = {
-		"rfio:///castor/cern.ch/user/c/carrillo/MonteCarlo80/ROOT/sim_2muon_100pt.001.root"
+		"rfio:///castor/cern.ch/user/c/carrillo/MonteCarloEta/ROOT/muon_100pt.003.root"
 		}
-	}
+	} 
 
 	#keep the logging output to a nice level
 	service = MessageLogger {}
 
 	module museg = MuonSegmentEff { 
 
-		bool inclcsc = true
-		bool incldtMB4 = false
-		bool incldt = true
+		untracked bool inclcsc = false
+		untracked bool incldtMB4 = true
+		untracked bool incldt = true
 
-		int32 widestrip = 5
-		int32 widestripRB4 = 7
-		double MinCosAng = 0.9999
-		double MaxD = 40
+		untracked int32 widestrip = 5
+		untracked int32 widestripRB4 = 7
+		untracked double MinCosAng = 0.9999
+		untracked double MaxD = 40
 
-		string muonRPCDigis = "muonRPCDigis"
-		string cscSegments = "cscSegments"
-		string dt4DSegments = "dt4DSegments"
+		untracked string muonRPCDigis = "muonRPCDigis"
+		untracked string cscSegments = "cscSegments"
+		untracked string dt4DSegments = "dt4DSegments"
+
+		untracked string rejected = "rejected.003.txt"
+		untracked string rollseff = "rollseff.003.txt"
                
 		untracked bool   EffSaveRootFile  = true
 		untracked int32  EffSaveRootFileEventsInterval  = 100
-		untracked string EffRootFileName  = "MuonSegEff_RPCGlobal.root"
+		untracked string EffRootFileName  = "MuonSegEff_RPCGlobal.003.root"
 
 	}
 
@@ -42,22 +42,21 @@ process RPCSegmentEff = {
 	include "Geometry/DTGeometry/data/dtGeometry.cfi"
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
 
-	service = ModuleWebRegistry{ }
+	#service = ModuleWebRegistry{ }
 	service = DaqMonitorROOTBackEnd{}
-	service = LockService{untracked vstring labels = {"source"}}
+	#service = LockService{untracked vstring labels = {"source"}}
 	service = MonitorDaemon {
-	       untracked   bool AutoInstantiate    = true
+	       untracked   bool AutoInstantiate    = false
 	       untracked  int32 reconnect_delay    = 5
 	       untracked string DestinationAddress = "cmsdaquser0.cern.ch"
 	       untracked  int32 SendPort           = 9090
-	       untracked  int32 UpdateDelay        = 10000
 	       untracked string NameAsSource       = "GlobalDQM"
 	}
 
 
 
 	module out = PoolOutputModule {
-                untracked string fileName ="MuonSeg.root"
+                untracked string fileName ="MuonSeg.000.root"
         }
 	path p = {museg} 
 
