--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,7 +5,7 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-		"rfio:///castor/cern.ch/user/c/carrillo/MonteCarloEta/ROOT/muon_100pt.003.root"
+		"file:/tmp/carrillo/SingleMuon100ptDigisDTyCSCSeg.198.root"
 		}
 	} 
 
@@ -14,21 +14,21 @@ process RPCSegmentEff = {
 
 	module museg = MuonSegmentEff { 
 
-		untracked bool inclcsc = false
-		untracked bool incldtMB4 = true
-		untracked bool incldt = true
+		untracked bool inclcsc = true
+		untracked bool incldtMB4 = false
+		untracked bool incldt = false
 
-		untracked int32 widestrip = 5
-		untracked int32 widestripRB4 = 7
-		untracked double MinCosAng = 0.9999
+		untracked int32 widestrip = 4
+		untracked int32 widestripRB4 = 4
+		untracked double MinCosAng = 0.99
 		untracked double MaxD = 40
 
 		untracked string muonRPCDigis = "muonRPCDigis"
 		untracked string cscSegments = "cscSegments"
 		untracked string dt4DSegments = "dt4DSegments"
 
-		untracked string rejected = "rejected.003.txt"
-		untracked string rollseff = "rollseff.003.txt"
+		untracked string rejected = "rejected.txt"
+		untracked string rollseff = "rollseff.txt"
                
 		untracked bool   EffSaveRootFile  = true
 		untracked int32  EffSaveRootFileEventsInterval  = 100
