--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,7 +5,7 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-		"file:/tmp/carrillo/SingleMuon100ptDigisDTyCSCSeg.198.root"
+		"file:/afs/cern.ch/user/c/carrillo/scratch0/SingleMuon100ptDigisDTyCSCSeg.198.root"
 		}
 	} 
 
@@ -14,9 +14,9 @@ process RPCSegmentEff = {
 
 	module museg = MuonSegmentEff { 
 
-		untracked bool inclcsc = true
-		untracked bool incldtMB4 = false
-		untracked bool incldt = false
+		untracked bool inclcsc = 1
+		untracked bool incldtMB4 = 0
+		untracked bool incldt = 0
 
 		untracked int32 widestrip = 4
 		untracked int32 widestripRB4 = 4
