widestrip as double

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,7 +5,9 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-		"file:/afs/cern.ch/user/c/carrillo/scratch0/SingleMuon100ptDigisDTyCSCSeg.198.root"
+#		"file:/afs/cern.ch/user/c/carrillo/scratch0/muon_100pt_S4_W0_.root"
+		"file:/afs/cern.ch/user/c/carrillo/scratch0/SingleMuon100ptDigisDTyCSCSeg.101_170pre8_.root"
+	
 		}
 	} 
 
@@ -14,12 +16,12 @@ process RPCSegmentEff = {
 
 	module museg = MuonSegmentEff { 
 
-		untracked bool inclcsc = 1
-		untracked bool incldtMB4 = 0
+		untracked bool inclcsc = 0
+		untracked bool incldtMB4 = 1 
 		untracked bool incldt = 0
 
-		untracked int32 widestrip = 4
-		untracked int32 widestripRB4 = 4
+		untracked double widestrip = 4
+		untracked double widestripRB4 = 4
 		untracked double MinCosAng = 0.99
 		untracked double MaxD = 40
 
@@ -56,7 +58,7 @@ process RPCSegmentEff = {
 
 
 	module out = PoolOutputModule {
-                untracked string fileName ="MuonSeg.000.root"
+                untracked string fileName ="MuonSeg.root"
         }
 	path p = {museg} 
 
