--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -16,14 +16,14 @@ process RPCSegmentEff = {
 
 	module museg = MuonSegmentEff { 
 
-		untracked bool inclcsc = 0
-		untracked bool incldtMB4 = 1 
-		untracked bool incldt = 0
+		untracked bool inclcsc = 1
+		untracked bool incldtMB4 = 1
+		untracked bool incldt = 1
 
 		untracked double widestrip = 4
 		untracked double widestripRB4 = 4
 		untracked double MinCosAng = 0.99
-		untracked double MaxD = 40
+		untracked double MaxD = 7.
 
 		untracked string muonRPCDigis = "muonRPCDigis"
 		untracked string cscSegments = "cscSegments"
