StandAlone RPC Efficiency From Track Reco

--- a/test/rpcStandAloneEfficiency.cfg
+++ b/test/rpcStandAloneEfficiency.cfg
@@ -48,6 +48,7 @@ process RPCStandAlone = {
 		untracked string trajectoryInput = "standAloneMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
 		untracked string EffRootFileName = "RPCSAloneEfficiencyFromTrack.root"
+		untracked string GlobalRootFileName = "GlobalEfficiencyFromTrack.root"
 	}
 
 
