RPC Efficiency From Track Reco

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -68,6 +68,7 @@ process RPCEff = {
 		untracked string trajectoryInput = "standAloneMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
 		untracked string EffRootFileName = "RPCEfficiencyFromTrack.root"
+		untracked string GlobalRootFileName ="GlobalEfficiencyFromTrack.root"
 	}
 
 
