RPC Track Efficiency From Digis

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -1,9 +1,14 @@
 process RPCEff = {
 	source = PoolSource{
 	untracked vstring fileNames ={
-		//ZMuMu CMSSW_1_6_7
-		#"/store/mc/2007/11/16/HLT-Zmumu-1195225938/0053/002A5336-6694-DC11-9CAC-001617C3B6CC.root"
-		"file:/tmp/groselli/standAloneProducer.root"
+		//ZMuMu CMSSW_1_7_0
+		"/store/mc/2007/11/19/RelVal-RelValZMM-1195478550/0000/185A29AF-3A97-DC11-A6AB-000423D99896.root",
+		"/store/mc/2007/11/19/RelVal-RelValZMM-1195478550/0000/2C13E0D7-2898-DC11-ABD1-000423D6B5C4.root",
+		"/store/mc/2007/11/19/RelVal-RelValZMM-1195478550/0000/689E24F9-2898-DC11-B264-000423D9890C.root",
+		"/store/mc/2007/11/19/RelVal-RelValZMM-1195478550/0000/A49CBEF5-3498-DC11-A688-001617DBD5AC.root"
+
+
+		#"file:/tmp/groselli/standAloneProducer.root"
 		}
 
 	untracked uint32 debugVebosity = 10
