GREN data analyzer From Track extrapolation

--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -9,7 +9,7 @@ process RPCEff = {
 	untracked uint32 debugVebosity = 10
         untracked bool   debugFlag     = true
         }
-	untracked PSet maxEvents = {untracked int32 input = -1}
+	untracked PSet maxEvents = {untracked int32 input = 100}
 
         include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
@@ -54,6 +54,14 @@ process RPCEff = {
 
 	# Standalone muon producer
 	include "RecoMuon/StandAloneMuonProducer/data/standAloneMuons.cff"
+
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableDTMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableCSCMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableRPCMeasurement = false
+
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableDTMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableCSCMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableRPCMeasurement = false
 
 #################### StandAlone Muon Reco ######################################
 
