RPC efficiency from track extrapolation with GREN data

--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -61,7 +61,7 @@ process RPCEff = {
 
 	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableDTMeasurement = true
 	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableCSCMeasurement = true
-	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableRPCMeasurement = false
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableRPCMeasurement = true
 
 #################### StandAlone Muon Reco ######################################
 
