GREN data analyzer and cosmic track extrapolation

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -51,10 +51,19 @@ process RPCEff = {
 #################### StandAlone Muon Reco ######################################   
 
 	# Seed generator
-	include "RecoMuon/MuonSeedGenerator/data/standAloneMuonSeeds.cff"
+	#include "RecoMuon/MuonSeedGenerator/data/standAloneMuonSeeds.cff"
+	include "RecoMuon/MuonSeedGenerator/data/CosmicMuonSeedProducer.cfi"
 
 	# Standalone muon producer
 	include "RecoMuon/StandAloneMuonProducer/data/standAloneMuons.cff"
+
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableDTMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableCSCMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableRPCMeasurement = false
+
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableDTMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableCSCMeasurement = true
+	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableRPCMeasurement = false
 
 #################### StandAlone Muon Reco ######################################
 
