--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -50,10 +50,12 @@ process RPCEff = {
 #################### StandAlone Muon Reco ######################################   
 
 	# Seed generator
-	include "RecoMuon/MuonSeedGenerator/data/standAloneMuonSeeds.cff"
+	include "RecoMuon/MuonSeedGenerator/data/CosmicMuonSeedProducer.cfi"
 
 	# Standalone muon producer
 	include "RecoMuon/StandAloneMuonProducer/data/standAloneMuons.cff"
+
+	replace standAloneMuons.InputObjects = CosmicMuonSeed
 
 	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableDTMeasurement = true
 	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableCSCMeasurement = true
@@ -97,6 +99,6 @@ process RPCEff = {
 	#path p = {rpcefftrack}
 
 	#GREN path
-	path p = { MuonSeed, standAloneMuons, rpcefftrack}
+	path p = { CosmicMuonSeed, standAloneMuons, rpcefftrack}
 
 }
