Efficiency analyzer from track extrapolation

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -45,14 +45,15 @@ process RPCEff = {
 
 #------------------------------------ RPC --------------------------------------
 
+
 	# The module for 1D RPC RecHit building
 	include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
 
 #################### StandAlone Muon Reco ######################################   
 
-	# Seed generator
-	#include "RecoMuon/MuonSeedGenerator/data/standAloneMuonSeeds.cff"
-	include "RecoMuon/MuonSeedGenerator/data/CosmicMuonSeedProducer.cfi"
+	# Seed generator Finder
+	include "RecoMuon/MuonSeedGenerator/data/standAloneMuonSeeds.cff"
+
 
 	# Standalone muon producer
 	include "RecoMuon/StandAloneMuonProducer/data/standAloneMuons.cff"
