GREN data analyzer from track extrapolation

--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -49,20 +49,22 @@ process RPCEff = {
 
 #################### StandAlone Muon Reco ######################################   
 
-	# Seed generator
+	# Seed generator Finder
 	include "RecoMuon/MuonSeedGenerator/data/CosmicMuonSeedProducer.cfi"
+	#replace CosmicMuonSeed.EnableCSCMeasurement = false
+
 
 	# Standalone muon producer
 	include "RecoMuon/StandAloneMuonProducer/data/standAloneMuons.cff"
 
 	replace standAloneMuons.InputObjects = CosmicMuonSeed
 
-	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableDTMeasurement = true
-	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableCSCMeasurement = true
-	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableRPCMeasurement = false
+	replace standAloneMuons.STATrajBuilderParameters.NavigationType = "Direct"
+	replace standAloneMuons.TrackLoaderParameters.VertexConstraint = false
 
-	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableDTMeasurement = true
-	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableCSCMeasurement = true
+	# to run only over DT and CSC measurements uncomment these cards
+
+	replace standAloneMuons.STATrajBuilderParameters.RefitterParameters.EnableRPCMeasurement = false
 	replace standAloneMuons.STATrajBuilderParameters.BWFilterParameters.EnableRPCMeasurement = true
 
 #################### StandAlone Muon Reco ######################################
@@ -81,7 +83,6 @@ process RPCEff = {
 		untracked string EffRootFileName = "/tmp/groselli/GREN/30126/RPCEfficiencyFromTrack.root"
 		untracked string GlobalRootFileName ="/tmp/groselli/GREN/30126/GlobalEfficiencyFromTrack.root"
 	}
-
 
 	service = DaqMonitorROOTBackEnd{}
 	service = MonitorDaemon {
