GREN data analyzer with Stepping Helix

--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -65,10 +65,10 @@ process RPCEff = {
 
 	    PSet TrajectoryBuilderParameters = {
 		string Propagator = "SteppingHelixPropagatorAny"
-	        untracked bool BuildTraversingMuon = false
+	        untracked bool BuildTraversingMuon = true
 		untracked bool EnableDTMeasurement = true
 		untracked bool EnableCSCMeasurement = false
-		untracked bool EnableRPCMeasurement = true
+		untracked bool EnableRPCMeasurement = false
 		PSet MuonTrajectoryUpdatorParameters = {
 		    double MaxChi2 = 30000 #30000 default need to be huge at this step
 		    int32 Granularity = 0 #ONLY 0! otherwise may got wrong RH order
@@ -95,7 +95,7 @@ process RPCEff = {
 		bool ReadBarrel = true
 
 		#Cut expressed in cm
-		double EfficiencyCut = 15.
+		double EfficiencyCut = 8.
  		string PropagatorName = "SteppingHelixPropagatorAny"
 		untracked string trajectoryInput =  "cosmicMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
