RPCEfficiency with Stepping Helix

--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -51,8 +51,8 @@ process RPCEff = {
         	untracked string DTRecSegmentLabel = 'dt4DSegments'
 	        untracked string CSCRecSegmentLabel = 'cscSegments'
         	int32 MaxSeeds = 10
-	        double MaxDTChi2 = 300
-        	double MaxCSCChi2 = 300
+	        double MaxDTChi2 = 3000
+        	double MaxCSCChi2 = 3000
 	}
 
 	# Standalone muon producer
@@ -84,8 +84,8 @@ process RPCEff = {
 		    double RescaleErrorFactor = 1. 
 		}	
 		PSet BackwardMuonTrajectoryUpdatorParameters = {
-		    double MaxChi2 = 50 # smaller at this step
-		    int32 Granularity = 0 # 2 default
+		    double MaxChi2 = 10 # (100 default) smaller at this step
+		    int32 Granularity = 2 # 2 default
 		    bool RescaleError = false
 		    double RescaleErrorFactor = 1. 
 		}
@@ -103,7 +103,7 @@ process RPCEff = {
 		bool ReadBarrel = true
 
 		#Cut expressed in cm
-		double EfficiencyCut = 8.
+		double EfficiencyCut = 15.
  		string PropagatorName = "SteppingHelixPropagatorAny"
 		untracked string trajectoryInput =  "cosmicMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
