RPC Efficiency with Stepping Helix

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -11,7 +11,7 @@ process RPCEff = {
 	untracked uint32 debugVebosity = 10
         untracked bool   debugFlag     = true
         }
-	untracked PSet maxEvents = {untracked int32 input = 1000}
+	untracked PSet maxEvents = {untracked int32 input = -1}
 
         include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
@@ -82,10 +82,12 @@ process RPCEff = {
 		bool ReadBarrel = true
 
 		#Cut expressed in cm
-		double EfficiencyCut = 10.
+		double EfficiencyCut = 15.
  		string PropagatorName = "SteppingHelixPropagator"
 		untracked string trajectoryInput =  "standAloneMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
+		untracked string SelectWheel = false
+		untracked int Ring = 0
 		untracked string EffRootFileName = "/tmp/groselli/RPCEfficiencyFromTrack_ZMuMu.root"
 		untracked string GlobalRootFileName ="/tmp/groselli/GlobalEfficiencyFromTrack_ZMuMu.root"
 
