--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -107,6 +107,8 @@ process RPCEff = {
  		string PropagatorName = "SteppingHelixPropagatorAny"
 		untracked string trajectoryInput =  "cosmicMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
+		untracked string SelectWheel = true
+		untracked int Ring = 0
 		untracked string EffRootFileName = "/tmp/groselli/RPCEfficiencyFromTrack.root"
 		untracked string GlobalRootFileName ="/tmp/groselli/GlobalEfficiencyFromTrack.root"
 	}
