--- a/test/rpcStandAloneEfficiency.cfg
+++ b/test/rpcStandAloneEfficiency.cfg
@@ -44,7 +44,8 @@ process RPCStandAlone = {
 
 		#Cut expressed in cm
 		double EfficiencyCut = 6.
-
+		untracked string SelectWheel = false
+		untracked int Ring = 0
 		untracked string trajectoryInput = "standAloneMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
 		untracked string EffRootFileName = "RPCSAloneEfficiencyFromTrack.root"
