RPC Efficiency with Stepping Helix

--- a/test/prodTrackRPCEfficiency.cfg
+++ b/test/prodTrackRPCEfficiency.cfg
@@ -86,8 +86,8 @@ process RPCEff = {
  		string PropagatorName = "SteppingHelixPropagator"
 		untracked string trajectoryInput =  "standAloneMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
-		untracked string SelectWheel = false
-		untracked int Ring = 0
+		bool SelectWheel = true
+		int32 Ring = 0
 		untracked string EffRootFileName = "/tmp/groselli/RPCEfficiencyFromTrack_ZMuMu.root"
 		untracked string GlobalRootFileName ="/tmp/groselli/GlobalEfficiencyFromTrack_ZMuMu.root"
 
