--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -107,8 +107,8 @@ process RPCEff = {
  		string PropagatorName = "SteppingHelixPropagatorAny"
 		untracked string trajectoryInput =  "cosmicMuons"
 		untracked string rpcRecHitLabel = "rpcRecHits"
-		untracked bool SelectWheel = true
-		untracked int Ring = 0
+		bool SelectWheel = true
+		int32 Ring = 0
 		untracked string EffRootFileName = "/tmp/groselli/RPCEfficiencyFromTrack.root"
 		untracked string GlobalRootFileName ="/tmp/groselli/GlobalEfficiencyFromTrack.root"
 	}
