RPC Efficiency From Track extrapolation

--- a/test/prodTrackRPCEfficiencyGREN.cfg
+++ b/test/prodTrackRPCEfficiencyGREN.cfg
@@ -79,7 +79,7 @@ process RPCEff = {
 
 	    PSet TrajectoryBuilderParameters = {
 		string Propagator = "SteppingHelixPropagatorAny"
-	        untracked bool BuildTraversingMuon = false
+	        untracked bool BuildTraversingMuon = true
 		untracked bool EnableDTMeasurement = true
 		untracked bool EnableCSCMeasurement = false
 		untracked bool EnableRPCMeasurement = false
@@ -90,7 +90,7 @@ process RPCEff = {
 		    double RescaleErrorFactor = 1. 
 		}	
 		PSet BackwardMuonTrajectoryUpdatorParameters = {
-		    double MaxChi2 = 9 # (100 default) smaller at this step
+		    double MaxChi2 = 5 # (100 default) smaller at this step
 		    int32 Granularity = 2 # 2 default
 		    bool RescaleError = false
 		    double RescaleErrorFactor = 1. 
