This commit was manufactured by cvs2git to create tag 'DQM- RPCMonitorDigi-V03-00-12'.
Sprout from master 2008-04-25 19:36:51 UTC Anna Cimmino <sha1-afe53aef2ff6db42fff967e60ac6346900548455@cern.ch> 'added new summary ME. reset MEs at begin run'
Cherrypick from master 2008-03-28 07:08:58 UTC Rick Wilkinson <sha1-197b93d87bf2e1eb4349df76c6ec25fd8f1f348e@cern.ch> 'adding new py configs':
    python/__init__.py
    test/dqm_muonsegmenteff.cfg

--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -6,7 +6,7 @@ process RPCSegmentEff = {
    
 	untracked vstring fileNames = {
 #		"file:/afs/cern.ch/user/c/carrillo/scratch0/muon_100pt_S4_W0_.root"
-		"file:/tmp/carrillo/SingleMuon100ptDigisDTyCSCSeg_100.284.root"
+		"file:/afs/cern.ch/user/c/carrillo/scratch0/SingleMuon100ptDigisDTyCSCSeg.101_170pre8_.root"
 	
 		}
 	} 
@@ -16,7 +16,7 @@ process RPCSegmentEff = {
 
 	module museg = MuonSegmentEff { 
 
-		untracked bool inclcsc = 0
+		untracked bool inclcsc = 1
 		untracked bool incldtMB4 = 1
 		untracked bool incldt = 1
 
@@ -43,18 +43,17 @@ process RPCSegmentEff = {
 	include "Geometry/CSCGeometry/data/cscGeometry.cfi"
 	include "Geometry/DTGeometry/data/dtGeometry.cfi"
 	include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
-	include "DQMServices/Core/data/DQM.cfg"	
 
 	#service = ModuleWebRegistry{ }
-	#service = DaqMonitorROOTBackEnd{}
+	service = DaqMonitorROOTBackEnd{}
 	#service = LockService{untracked vstring labels = {"source"}}
-	#service = MonitorDaemon {
-	#       untracked   bool AutoInstantiate    = false
-	#       untracked  int32 reconnect_delay    = 5
-	#       untracked string DestinationAddress = "cmsdaquser0.cern.ch"
-	#       untracked  int32 SendPort           = 9090
-	#       untracked string NameAsSource       = "GlobalDQM"
-	#}
+	service = MonitorDaemon {
+	       untracked   bool AutoInstantiate    = false
+	       untracked  int32 reconnect_delay    = 5
+	       untracked string DestinationAddress = "cmsdaquser0.cern.ch"
+	       untracked  int32 SendPort           = 9090
+	       untracked string NameAsSource       = "GlobalDQM"
+	}
 
 
 
