--- a/test/dqm_muonsegmenteff.cfg
+++ b/test/dqm_muonsegmenteff.cfg
@@ -5,9 +5,7 @@ process RPCSegmentEff = {
 	source = PoolSource { 
    
 	untracked vstring fileNames = {
-#		"file:/afs/cern.ch/user/c/carrillo/scratch0/muon_100pt_S4_W0_.root"
-		"file:/tmp/carrillo/SingleMuon100ptDigisDTyCSCSeg_100.284.root"
-	
+		"file:/tmp/carrillo/rechit4D_98.root"
 		}
 	} 
 
@@ -23,7 +21,7 @@ process RPCSegmentEff = {
 		untracked double widestrip = 4
 		untracked double widestripRB4 = 4
 		untracked double MinCosAng = 0.99
-		untracked double MaxD = 7.
+		untracked double MaxD = 100.
 
 		untracked string muonRPCDigis = "muonRPCDigis"
 		untracked string cscSegments = "cscSegments"
@@ -64,3 +62,4 @@ process RPCSegmentEff = {
 	path p = {museg} 
 
 }
+
